<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Informations"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:src="@drawable/so_how_does_it_work"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textStyle="italic"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/base_screen"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/infoOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/all_task"/>

            <TextView
                android:text="@string/infoTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/speed_task"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/infoThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView6" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/option_task"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/infoFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView7" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/information_task"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <TextView
                android:text="@string/infoFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView8" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/preci_task"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/preci_taskactivity"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/infoSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView9" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Github Sources"
                android:onClick="onListenerButton"
                android:id="@+id/githuB"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>